--- a/src/app/consumidor/tab-inicial/tab-inicial.page.html
+++ b/src/app/consumidor/tab-inicial/tab-inicial.page.html
@@ -10,7 +10,7 @@
       <ion-label class="text-color-purple text-bold">Agricultoras</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="carrito">
+    <ion-tab-button (click)="goCar()">
       <ion-icon src="/assets/icon/car.svg"></ion-icon>
       <ion-label class="text-color-purple text-bold">Carrito</ion-label>
     </ion-tab-button>
