--- a/src/app/consumidor/tab_carrito/carrito/carrito.page.html
+++ b/src/app/consumidor/tab_carrito/carrito/carrito.page.html
@@ -34,7 +34,7 @@
           <ion-grid>
             <ion-row>
               <ion-col>
-                <p>2 {{product.measure}}</p>
+                <p>{{product.measure}}</p>
               </ion-col>
               <ion-col style="text-align: right;">
                 {{product.price}}
