--- a/src/global.scss
+++ b/src/global.scss
@@ -97,6 +97,10 @@ ion-content {
   color: var(--warmin-color-purple);
 }
 
+.text-color-pinkd {
+  color: var(--warmin-color-pinkd);
+}
+
 .text-color-brown {
   color: var(--warmin-color-brown);
 }
