--- a/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.scss
+++ b/src/app/consumidor/tab_agricultoras/perfil-ma/perfil-ma.page.scss
@@ -105,3 +105,8 @@ capacitor-google-maps {
   width: 95%;
 }
 
+.btn-ordenar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
