--- a/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
+++ b/src/app/consumidor/tab_agricultoras/lista-agricultoras/lista-agricultoras.page.html
@@ -8,8 +8,10 @@
     </div>
   </div>
  <!--Search Bar  -->
-    <div class="container-normal padding-bar">
-      <ion-searchbar class="search-bar" placeholder="Buscar" showCancelButton="never"></ion-searchbar>
+    <div class="container-search-bar padding-bar">
+      <div class="">
+        <ion-searchbar placeholder="Buscar" class="search-bar-orange" showCancelButton="never"></ion-searchbar>
+      </div>
     </div>
 <!-- List of people -->
     <div class="contenedor-perfiles">      
