--- a/src/app/ma_vendedora/tab_productos/agregar-producto/agregar-producto.page.html
+++ b/src/app/ma_vendedora/tab_productos/agregar-producto/agregar-producto.page.html
@@ -6,7 +6,7 @@
     <div class="contenedor-header">
       <ion-icon class="icon-header size-icon" slot="start" src="/assets/icon/ubication.svg">
       </ion-icon>      
-      <div class="texto-header">Agregar producto</div>
+      <div class="texto-header">Producto</div>
     </div>    
   </div>
   <div class="contenedor-title">
@@ -14,12 +14,12 @@
       <h4 class="text-center size-text35px text-bold text-color-purple">Ingresa datos del producto</h4>
     </div>
   </div>
-  <form (ngSubmit)="addProduct()">
+  <form>
   <div class="contenedor-item">
     <ion-icon slot="start" class="size-icon"  src="/assets/iconos/col.svg"></ion-icon>
     <ion-item lines="none" class="input-border-bot item-native-transparency">
       <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Nombre del producto</ion-label>
-      <ion-input [(ngModel)]="producName" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
+      <ion-input value="{{productName || ''}}" [(ngModel)]="producName" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
       </ion-input>              
     </ion-item>
   </div>
@@ -27,7 +27,7 @@
     <ion-icon slot="start" class="size-icon"  src="/assets/iconos/col.svg"></ion-icon>
     <ion-item lines="none" class="input-border-bot item-native-transparency">
       <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Descripción</ion-label>
-      <ion-input [(ngModel)]="description" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
+      <ion-input value="{{descriptionProduct || ''}}" [(ngModel)]="description" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
       </ion-input>              
     </ion-item>
   </div>
@@ -37,20 +37,20 @@
       <ion-label style=" color: var(--warmin-color-purple);" position="floating" class="texto-center text-bold">Unidad venta
       </ion-label>
       <ion-select [(ngModel)]="unidadVenta" interface="popover"
-        [ngModelOptions]="{standalone: true}">
+        [ngModelOptions]="{standalone: true}" placeholder="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{measureProduct}}">
         <!-- Opciones -->
      
         <ion-select-option *ngFor="let measure of measures" value="{{measure.id}}">{{measure.measure}}</ion-select-option>
         
    
-      </ion-select>                         
+      </ion-select>                      
     </ion-item>
   </div>
   <div class="contenedor-item">
     <ion-icon slot="start" class="size-icon"  src="/assets/iconos/col.svg"></ion-icon>
     <ion-item lines="none" class="input-border-bot item-native-transparency">
       <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Precio:</ion-label>
-      <ion-input [(ngModel)]="precio" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
+      <ion-input value="{{price || ''}}" [(ngModel)]="precio" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
       </ion-input>              
     </ion-item>
   </div>
@@ -58,7 +58,7 @@
     <ion-icon slot="start" class="size-icon"  src="/assets/iconos/col.svg"></ion-icon>
     <ion-item lines="none" class="input-border-bot item-native-transparency">
       <ion-label style="color: var(--warmin-color-purple);" position="floating" class="text-center text-bold">Stock:</ion-label>
-      <ion-input [(ngModel)]="stock" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
+      <ion-input value="{{stock || ''}}" [(ngModel)]="stock" type="text" [ngModelOptions]="{standalone: true}" class="text-center">
       </ion-input>              
     </ion-item>
   </div>
@@ -82,6 +82,7 @@
   <img class="image" style="width: 250px; height: 250px; margin-left: 80px;" [src]="foto || '../assets/img/chooseImg.png'">
 </ion-item>
 
-<ion-button class="boton-warmi-in" type="submit" expand="block">  &nbsp; &nbsp;Continuar</ion-button>
+<ion-button (click)="addProduct()" *ngIf="productId == 0" class="boton-warmi-in" type="submit" expand="block">  &nbsp; &nbsp;Guardar</ion-button>
+<ion-button (click)="updateProduct()" *ngIf="productId != 0" class="boton-warmi-in" type="submit" expand="block">  &nbsp; &nbsp;Actualizar</ion-button>
 </form>
 </ion-content>
