--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,19 +12,19 @@
         <!-- photo Profile -->
         <div class="contenedor-item-menu">
           <ion-avatar class="size-avatar">
-            <img src="./assets/img/comprador.jpg" />
+            <img src="{{foto}}" />
           </ion-avatar>
         </div>
         <!-- date profile -->
         <div>
           <div class="contenedor-item-menu text-center text-bold text-white">
-            <ion-label>Edison Tanyan</ion-label>
+            <ion-label>{{name}}</ion-label>
           </div>
           <div class="contenedor-item-menu text-center text-bold">
-            <ion-note class="text-white">1324324242</ion-note>
+            <ion-note class="text-white">{{identification_card}}</ion-note>
           </div>
           <div class="contenedor-item-menu text-center text-bold">
-            <ion-note class="text-white">0993335589</ion-note>
+            <ion-note class="text-white">{{phone}}</ion-note>
           </div>
         </div>
         <!-- Botones de Accion -->
